* Ensure isHostObject() avoids a false positive for null values. [jddalton, kangax]

* Rename Element#childElements to getChildren() and add `get` prefix to element methods ancestors(), classNames(), descendants(), siblings(), nextSiblings(), and previousSiblings(). [jddalton, Joe Gornick]
  Note: Backwards compatibility warning.

* Rename Element#read/writeAttribute to get/setAttribute(), add `is` prefix to String/Element#empty and `get` prefix to element methods cumulativeOffset(), cumulativeScrollOffset(), positionedOffset(), and viewportOffset(), [jddalton, Joe Gornick]
  Note: Backwards compatibility warning.

* Add support for `context` and `callback` arguments to Fuse.Util.$$() and fix failing selector unit tests. [jddalton]

* Make Fuse.Array#concat and Fuse.Array#slice replacements conform to ECMA 5 specification. [Prototype LH #843] [jddalton, Yaffle]

* Optimize Fuse.Dom.Node() handling of window objects. [jddalton]

* Make Fuse.String#stripTags allow tag names to contain hyphens as stated in spec. [jddalton]

* Reduce the complexity of the html check in Fuse.get() and Fuse.Dom.Element.create() and tweak the feature detection in getNodeName(). [jddalton, kangax]

* Ensure IE Fuse.Dom.Element#getStyle converts negative non-px values to px. [jddalton, jakearchibald, kangax]

* Normalize \t \n \r and multiple spaces to \x20 in element className methods. [jddalton]

* Move method definition of Fuse.Util.$, Fuse.get, and Fuse.getById to dom.js and cleanup element.js. [jddalton]

* Switch from using Array#join for string concatenation to using the plus (+) operator for better minification. [jddalton]

* Support updateGenerics() methods on the DOM wrappers. [jddalton]

* Tweak how String#unescapeHTML tokenizes tags. [jddalton]

* Fix regression bug with Fuse.Dom.Node.getFuseId() getting the proper id. [jddalton]

* Add support for passing a callback to Fuse.query(selector, context, callback). [jddalton]
