@@ -1,3 +1,6 @@
+* Rename Element#descendantOf to Element#contains and flip the functionality. [jddalton, Joe Gornick]
+  Note: Backwards compatibility warning.
+
 * Ensure isHostObject() avoids a false positive for null values. [jddalton, kangax]
 
 * Rename Element#childElements to getChildren() and add `get` prefix to element methods ancestors(), classNames(), descendants(), siblings(), nextSiblings(), and previousSiblings(). [jddalton, Joe Gornick]
